finalize search items

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.ecommerce</groupId>
     <artifactId>ecommerce_api</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>ecommerce_api</name>
     <description>Demo project for Spring Boot</description>
 
@@ -84,7 +84,11 @@
                 <version>${jib-version}</version>
                 <configuration>
                     <to>
-                        <image>docker.io/ahmedzaher54/${project.artifactId}:${project.version}</image>
+                        <image>docker.io/ahmedzaher54/${project.artifactId}</image>
+                        <tags>
+                            <tag>${project.version}</tag>
+                            <tag>latest</tag>
+                        </tags>
                     </to>
                 </configuration>
             </plugin>
