--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <java.version>1.8</java.version>
         <jib-version>2.1.0</jib-version>
+        <jjwt-version>0.9.1</jjwt-version>
     </properties>
 
     <dependencies>
@@ -31,6 +32,15 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${jjwt-version}</version>
         </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.liquibase</groupId>-->
