--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.hibernate.ddl-auto=update
 
 jwt.secret=jwt-secret
+#token validity time in seconds
+jwt-token-validity=18000
