--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,14 @@
                         </tags>
                     </to>
                 </configuration>
+                <executions>
+                    <execution>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
