--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.properties.hibernate.format_sql=true
 jwt.secret=jwt-secret
 #token validity time in seconds
 jwt-token-validity=18000
+security.allowed-origins=http://localhost:4200
