add Image Controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ jwt.secret=jwt-secret
 #token validity time in seconds
 jwt-token-validity=18000
 security.allowed-origins=http://localhost:4200
+
+assets.items.image-path=assets/imgs/items/
