--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,13 @@
     </parent>
     <groupId>com.ecommerce</groupId>
     <artifactId>ecommerce_api</artifactId>
-    <version>0.0.3-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
     <name>ecommerce_api</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
-        <jib-version>2.1.0</jib-version>
+        <jib-version>2.2.0</jib-version>
         <jjwt-version>0.9.1</jjwt-version>
     </properties>
 
@@ -103,6 +103,14 @@
                 </configuration>
                 <executions>
                     <execution>
+                        <id>package</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>dockerBuild</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>install</id>
                         <phase>install</phase>
                         <goals>
                             <goal>build</goal>
